--- a/scrollbar.scss
+++ b/scrollbar.scss
@@ -1,26 +1,28 @@
-//set this to the same colour as the webpage 
-$scrollbar-colour: white;
+
 $scrolltrack-colour: gainsboro;
 $scrollthumb-colour: #A0A0A0;
 @mixin shadow($property) {
     -webkit-box-shadow: $property; 
 }      
   
-
+/* sets the width*/
 ::-webkit-scrollbar {
-    background-color: $scrollbar-colour;
+    width: 1vw;
+    
    
 }
 
+/*hides the scroll bar when the browser isn't being used*/
  ::-webkit-scrollbar:window-inactive{
     display:none;
 }
        
 
+/*styling the "body" of the scroll bar*/
 ::-webkit-scrollbar-track{
     background-color: $scrolltrack-colour;
     border-radius: 10px;
-    @include shadow(inset 0 0 4px rgba(0,0,0,1.0)); 
+    @include shadow(inset 0 0 7px rgba(0,0,0,1.0)); 
         &:active {
             @include shadow(inset 0 0 10px rgba(0,0,0,1.0));
             }
@@ -28,16 +30,21 @@ $scrollthumb-colour: #A0A0A0;
     
 }
         
- 
+ /*styling the scrollbar thumb*/
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     @include shadow(inset 0 0 10px rgba(0,0,0,1)); 
     background-color: $scrollthumb-colour;
-    height: 15vh;
-    &:hover{
-        @include shadow(inset 0 0 20px rgba(0,0,0,1));
-    }
     &:active{
-        @include shadow(inset 0 0 30px rgba(0,0,0,1)); 
+        @include shadow(inset 0 0 17px rgba(0,0,0,1)); 
     }
+}
+
+/*this media query keeps the scroll bar width proportioned correctly on smaller screens*/
+@media only screen and (max-width: 700px) {
+    ::-webkit-scrollbar {
+    width: 2vw;
+    
+   
+}
 }
